Add embedded AP question library
